--- a/tsos.css
+++ b/tsos.css
@@ -1,5 +1,16 @@
 /* TSOS.css */
 
+#statusBar , #timeAndDate {
+  border-left: 7px solid orangered;
+  padding-left: 4px;
+  padding-right: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  background-color: darksalmon;
+  width: 587px;
+  word-wrap: break-word;
+}
+
 body {
   background: #909193;
   /* background-image: url(distrib/images/backdrop.jpg); */
