--- a/tsos.css
+++ b/tsos.css
@@ -49,6 +49,15 @@ h3 {
   cursor: default;
 }
 
+#tablePCB, #tableMemory {
+  border: 1.5px solid orangered;
+  width: 50%;
+}
+th, td {
+  border: 2px solid #00000A;
+  border-collapse: collapse;
+}
+
 .barrelroll {
   animation-name: rollAnimation;
   animation-duration: 2s;
